[gd_scene load_steps=11 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kenney Thick.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/coin.png" type="Texture" id=3]
[ext_resource path="res://Assets/BagPile.png" type="Texture" id=4]
[ext_resource path="res://Assets/BagPile2.png" type="Texture" id=5]
[ext_resource path="res://Assets/bag.png" type="Texture" id=6]
[ext_resource path="res://Assets/foot.png" type="Texture" id=7]
[ext_resource path="res://Assets/face.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 2
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -249.5
margin_right = 473.5
margin_bottom = -192.5
custom_fonts/font = SubResource( 1 )
text = "Title Text"
uppercase = true

[node name="Throne" type="Node2D" parent="."]

[node name="Backplate" type="Sprite" parent="Throne"]
position = Vector2( 338.304, 199.161 )
scale = Vector2( 1.77164, 1.81462 )
texture = ExtResource( 3 )

[node name="LeftArm" type="Node2D" parent="Throne"]
editor/display_folded = true

[node name="LeftArm1" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 493.516 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm2" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 478.815 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm3" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 464.848 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm4" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 451.616 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm5" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 439.12 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm6" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 424.418 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm7" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 410.451 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm8" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 397.219 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm9" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 385.458 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm10" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178.735, 377.372 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm11" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178, 364.448 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm12" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178, 350.767 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm13" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178, 335.857 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm14" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178, 322.626 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="LeftArm15" type="Sprite" parent="Throne/LeftArm"]
position = Vector2( 178, 307.189 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm" type="Node2D" parent="Throne"]
editor/display_folded = true

[node name="RightArm1" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 493.516 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm2" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 478.815 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm3" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 464.848 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm4" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 451.616 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm5" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 439.12 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm6" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 424.418 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm7" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 410.451 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm8" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 397.219 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm9" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 385.458 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm10" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 377.372 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm11" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 365.61 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm12" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 352.379 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm13" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 337.677 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm14" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 323.71 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="RightArm15" type="Sprite" parent="Throne/RightArm"]
position = Vector2( 498.245, 309.008 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle" type="Node2D" parent="Throne"]
editor/display_folded = true

[node name="Middle1" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 493.516 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle2" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 478.815 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle3" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 464.848 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle4" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 451.616 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle5" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 439.12 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle6" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 424.418 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle7" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 410.451 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle8" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 397.219 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle9" type="Sprite" parent="Throne/Middle"]
position = Vector2( 338.73, 385.458 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="Middle10" type="Sprite" parent="Throne/Middle"]
position = Vector2( 337.995, 373.161 )
scale = Vector2( 1, 0.317246 )
texture = ExtResource( 3 )

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 393.675
margin_top = 387.34
margin_right = 679.675
margin_bottom = 604.34
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 152.48, 123.577 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="CreditsButton"]
margin_left = 60.2565
margin_top = 139.81
margin_right = 235.256
margin_bottom = 168.81
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.243137, 0.258824, 0.0509804, 1 )
text = "Credits"
uppercase = true

[node name="Decore" type="Node2D" parent="."]

[node name="LeftBagPile" type="Node2D" parent="Decore"]
editor/display_folded = true

[node name="Bag1" type="Sprite" parent="Decore/LeftBagPile"]
position = Vector2( 99.3731, 495.314 )
scale = Vector2( 0.479968, 0.479968 )
texture = ExtResource( 6 )
flip_h = true

[node name="Bag2" type="Sprite" parent="Decore/LeftBagPile"]
position = Vector2( 67.6823, 514.424 )
scale = Vector2( 0.424968, 0.424968 )
texture = ExtResource( 6 )

[node name="CoinPile" type="Node2D" parent="Decore"]

[node name="Player" type="Node2D" parent="."]
scale = Vector2( 0.75, 0.7 )

[node name="Body" type="Sprite" parent="Player"]
position = Vector2( 450.544, 464.584 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_ik_": true
}

[node name="LeftFoot" type="Sprite" parent="Player/Body"]
position = Vector2( -30.0707, 76.3181 )
texture = ExtResource( 7 )

[node name="RightFoot" type="Sprite" parent="Player/Body"]
position = Vector2( 27.9293, 76.3181 )
texture = ExtResource( 7 )

[node name="Face" type="Sprite" parent="Player/Body"]
position = Vector2( -7.07068, -2.68188 )
texture = ExtResource( 8 )

[connection signal="mouse_entered" from="CreditsButton" to="." method="_on_CreditsButton_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton" to="." method="_on_CreditsButton_mouse_exited"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
